# timetable-optimizer

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
cli/: Cargo.toml
cli/data/: sample.json
cli/src/: data.rs  excel_parser.rs  main.rs  sample_data.rs  setup.rs
cli/src/export/: course_code.rs  image.rs  json.rs  mod.rs
cli/src/filter/: exclude_teacher.rs  free_workdays.rs  max_end_time.rs  max_gap_between_courses.rs  min_start_time.rs  mod.rs  no_course_between.rs
data/: sample.json
lib/: Cargo.toml
lib/src/: data.rs  excel_parser.rs  lib.rs  stats.rs
src/: data.rs  excel.rs  filter.rs  main.rs  sample_data.rs  setup.rs
src/export/: course_code.rs  image.rs  json.rs  mod.rs
src/filter/: exclude_teacher.rs  excluded_weekday.rs  free_workdays.rs  max_end_time.rs  max_gap_between_courses.rs  min_start_time.rs  mod.rs  no_course_between.rs  no_course_overlap.rs
web/: Cargo.toml  Trunk.toml  index.html  index.scss  tailwind.config.js
web/src/: app.rs  course.rs  lib.rs  main.rs  statistics.rs  storage.rs  subject.rs  timetable_generator.rs  upload.rs
