[package]
name = "timetable-optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.23.1"
chrono = { version = "0.4.31", features = ["serde"] }
itertools = "0.12.0"
permutator = "0.4.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
