[package]
name = "timetable-optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.47.0"
calamine = "0.23.1"
chrono = { version = "0.4.31", features = ["serde"] }
image = "0.24.7"
imageproc = "0.23.0"
indicatif = "0.17.7"
itertools = "0.12.0"
permutator = "0.4.3"
rayon = "1.8.1"
rusttype = "0.9.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
