[package]
name = "timetable-optimizer-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
timetable-optimizer-lib = { path = "../lib" }
cached = "0.49.3"
calamine = "0.24.0"
chrono = { version = "0.4.37", features = ["serde"] }
imageproc = "0.24.0"
indicatif = "0.17.8"
itertools = "0.12.1"
permutator = "0.4.3"
rayon = "1.10.0"
ab_glyph = "0.2.24"
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
