[package]
name = "timetable-optimizer-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
calamine = "0.23.1"
chrono = { version = "0.4.31", features = ["serde"] }
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
