[package]
name = "timetable-optimizer-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
calamine = "0.24.0"
chrono = { version = "0.4.37", features = ["serde"] }
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
