[package]
name = "timetable-optimizer-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
calamine = "0.25.0"
chrono = { version = "0.4.38", features = ["serde"] }
itertools = "0.13.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
