[package]
name = "timetable-optimizer-web"
version = "0.1.0"
edition = "2021"

[dependencies]
timetable-optimizer-lib = { path = "../lib" }
calamine = "0.25.0"
gloo = "0.11.0"
js-sys = "0.3.69"
web-sys = "0.3.69"
yew = { version="0.21", features=["csr"] }
serde_json = "1.0.120"
boolinator = "2.4.0"
